image containters fixed and blurrer, captions aligned

--- a/assets/style.css
+++ b/assets/style.css
@@ -46,6 +46,7 @@ li {
 
 a {
     text-decoration: none;
+    color: azure;
 }
 
 a:hover {
@@ -58,6 +59,9 @@ nav {
     justify-content: flex-end;
 }
 
+#nav-headings {
+    color: rgb(54, 54, 241);
+}
 .banner {
     width: 100%;
     height: 150px;
@@ -94,30 +98,35 @@ nav {
     display: flex;
     flex: wrap;
     max-width: 100%;
+
+   
 }
 
 /* About Me section */
 .about-me {
     display:flex;
     justify-content: center;
+   
     
 }
 #aboutmetitle {
-    padding: 100px 20px 20px 75px;
+    padding: 100px 40px 20px 75px;
     border-right: 3px solid #5DA9E9;
     height: 225px;
-    width: 20%;
+    width: 22%;
     justify-content: center;
     margin-top: 10px;
 }
+
 article {
     justify-content: center;
     align-content: center;
     padding: 1rem;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     margin: 10px 200px 20px 20px;
     line-height: 2;
-    width: 80%;
+    width: 75%;
+    
 }
 
 p {
@@ -141,51 +150,93 @@ p {
 }
 .mainprojects {
     justify-content: center;
-    align-content: center;
+    position: relative;
     padding: 1rem;
     font-size: 1.5rem;
     margin: 10px 200px 20px 20px;
     line-height: 2;
     width: 80%;
+
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
 }
 
 .leadingbox {
-    width: 60%;
-    max-width: 1000px;
+   
+    max-width: 100%;
     display: block;
+    position: relative;
 }
 
 img {
     max-width: 100%;
     border-radius: 8px;
-}
+   }
 
+#minor-image{
+    max-width: 100%;
+    width: 300px;
+    height: auto;
+    filter: blur(5px);
+    filter: grayscale(20px);
+}
 .lead-img {
     position: relative;
-    display:flex;
-    flex-wrap: wrap;
+    display:block;
     justify-content: center; 
     max-width: 100%;
     height:auto;
-    width: 700px;
-    margin: 15%;
+   
+   
 
     
 }
-.image-stop {
-    max-width: 50%;
+.images-top-container {
+    max-width: 100%;
     height:auto;
     padding: 20px;
     display: flex;
-    flex: wrap;
+    flex-wrap: wrap;
+    position: relative;
+    text-align: center;
+    color: white;
+    }
 
-}
-.images-bottom {
-    max-width: 50%;
+.images-bottom-container {
+    max-width: 100%;
     height:auto;
     padding: 20px;
     display: flex;
-    flex: wrap;
+    flex-wrap: wrap;
+    
+}
+#image-box-top {
+    position: relative;
+    display:block;
+     text-align: center;
+     color: rgb(240, 236, 236); 
+     padding: 20px;
+     max-width: 100%;
+     height: auto;
+}
+#image-box {
+   position: relative;
+    text-align: center;
+    color: rgb(240, 236, 236); 
+    padding: 20px;
+    max-width: 100%;
+    height: auto;
+}
+.image-caption-bottom-left {
+    position: absolute;
+    bottom: 20px;
+    left: 16px;
+    z-index: 100;
+    padding: 20px;
+    text-shadow:2px 2px  black ;
 }
 
 /* Contact Me Section*/
@@ -194,17 +245,20 @@ img {
     display: flex;
     width:auto
 }
-#contact {
+#contact-heading {
     padding: 100px 20px 20px 75px;
     border-right: 3px solid #5DA9E9;
     height: 225px;
     width: 20%;
     justify-content: center;
     margin-top: 10px;
+    
 }
 .contactme {
     display: flex;
-    justify-content: center
+    justify-content: center;
+    align-content: center;
+    align-items: center;
     
 }
 /* Resume section */
